test/src/e2e_vm_tests/test_programs/should_fail/mutable_fn_args_struct/src/main.sw
script;

struct S{}

fn mut_arg(mut s: S) {}

fn main() -> u32 {
    let mut s = S{};
    mut_arg(s);
    0
}
